@@ -1,6 +1,6 @@
 Package: xcms
 Version: 3.5.1
-Date: 2018-11-28
+Date: 2019-02-06
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>,
     Ralf Tautenhahn <rtautenh@gmail.com>,
